# node_energy_task

./: .editorconfig  .pre-commit-config.yaml  Makefile  README.md  pre-commit-config.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: customers.csv  meter_values.csv
makefiles/: git.make  python.make
src/: cli.py  create_invoice.py  exeptions.py  invoice.py
src/fixtures/: customers.csv  values.csv
src/tests/: test_cli.py
src/tests/fixtures/: values.csv
